<resources>
    <string name="app_name">TelePrompter</string>
    <string name="edit_title_hint">Title</string>
    <string name="edit_contents_hint">File contents …</string>
    <string name="edit_menu_save_title">Save</string>

    <string name="overwrite_dialog_title">Overwrite</string>
    <string name="overwrite_dialog_message">A file with this name already exists\nDo you want to overwrite ?</string>
    <string name="overwrite_dialog_button_rename">Rename</string>
    <string name="overwrite_dialog_button_overwrite">Overwrite</string>

    <string name="empty_dialog_title">The title or the contents cannot be empty</string>
    <string name="empty_dialog_button_ok">OK</string>

    <string name="file_picker_text_tab_title">Pick a text file</string>

    <string name="permission_toast_text">You should grant the permission to pick a file</string>

    <string name="unsaved_dialog_title">Save File</string>
    <string name="unsaved_dialog_button_save">Save</string>
    <string name="unsaved_dialog_button_leave">Leave</string>
    <string name="unsaved_dialog_button_edit">Edit</string>
    <string name="sheet_fab_create_new_text">Create New</string>
    <string name="sheet_fab_import_text">Import Text</string>
    <string name="a11y_cd_back_btn">Back</string>
    <string name="a11u_cd_change_camera">Change camera</string>
    <string name="a11y_cd_edit_file">Edit file</string>
    <string name="a11y_cd_reduce_speed">Reduce speed</string>
    <string name="a11y_cd_increase_speed">Increase speed</string>
    <string name="a11y_cd_record_settings">Settings</string>
    <string name="a11y_cd_record_play_text">Play text</string>
    <string name="a11y_cd_record_video">Record video</string>
    <string name="a11y_cd_settings_increase_speed">Increase scroll speed</string>
    <string name="a11y_cd_settings_decrease_scroll_speed">Decrease scroll speed</string>

    <string name="record_permission_needed_toast">The Camera permission is needed to record videos</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_scroll_speed_label">Scroll Speed</string>
    <string name="seting_text_size_label">Text Size</string>
    <string name="settings_text_color_label">Text Color</string>
    <string name="settings_background_color_label">Background Color</string>
    <string name="settings_text_color_value">#%s</string>
    <string name="settings_color_picker_confirm_label">Confirm</string>
    <string name="settings_color_picker_cancel_label">Cancel</string>
    <string name="setting_text_speed_max_toast">The maximum speed value is 20</string>

    <string name="settings_text_color_default">#FFFFFF</string>
    <string name="settings_toast_min_speed">The minimum scroll speed is 3</string>
    <string name="settings_toast_max_text_size">The Maximum text size is 50</string>
    <string name="settings_toast_min_text_size">The minimum text size is 12</string>
    <string name="widget_list_empty_view_string">Click to create a new file</string>
    <string name="files_widget_title">Files List</string>
    <string name="a11y_cd_files_widget_add_file">Add a new file</string>
    <string name="main_delete_toast_msg">%s is deleted</string>

</resources>
