<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoActivity">

    <TextureView
        android:id="@+id/texture_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/record_bars_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/record_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/a11y_cd_back_btn"
            android:padding="@dimen/padding_iv_record_top_bar"
            android:src="@drawable/ic_chevron_left_24dp"
            app:layout_constraintEnd_toStartOf="@+id/record_btn_change_cam"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/record_btn_change_cam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/a11u_cd_change_camera"
            android:padding="@dimen/padding_iv_record_top_bar"
            android:src="@drawable/ic_loop_24dp"
            app:layout_constraintEnd_toStartOf="@+id/record_btn_edit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/record_btn_back" />

        <ImageView
            android:id="@+id/record_btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/a11y_cd_edit_file"
            android:padding="@dimen/padding_iv_record_top_bar"
            android:src="@drawable/ic_edit_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/record_btn_change_cam" />


    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/record_bars_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/speed_control_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding_record_play_layout">

            <ImageView
                android:id="@+id/record_btn_reduce_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/a11y_cd_reduce_speed"
                android:src="@drawable/ic_chevron_left_24dp"
                app:layout_constraintEnd_toStartOf="@+id/recored_speed_seek_bar"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <SeekBar
                android:id="@+id/recored_speed_seek_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_record_speed_seek_bar_8dp"
                android:layout_marginRight="@dimen/margin_record_speed_seek_bar_8dp"
                android:max="20"
                android:minWidth="300dp"
                android:progress="5"
                app:layout_constraintEnd_toStartOf="@+id/record_btn_increase_speed"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/record_btn_reduce_speed" />

            <ImageView
                android:id="@+id/record_btn_increase_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/a11y_cd_increase_speed"
                android:src="@drawable/ic_chevron_right_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/recored_speed_seek_bar" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/play_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_record_bottom_play_layout"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/record_btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginside_record_side_btn"
                android:contentDescription="@string/a11y_cd_record_settings"
                android:padding="@dimen/padding_iv_record_top_bar"
                android:src="@drawable/ic_settings_24dp"
                app:layout_constraintEnd_toStartOf="@+id/record_btn_play"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/record_btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/a11y_cd_record_play_text"
                android:padding="@dimen/padding_iv_record_top_bar"
                android:src="@drawable/ic_play_arrow_24dp"
                app:layout_constraintEnd_toStartOf="@+id/record_btn_record_video"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/record_btn_settings" />


            <ImageView
                android:id="@+id/record_btn_record_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginside_record_side_btn"
                android:contentDescription="@string/a11y_cd_record_video"
                android:padding="@dimen/padding_iv_record_top_bar"
                android:src="@drawable/ic_videocam_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/record_btn_play" />


        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>