<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="@dimen/max_width_settings_fragment"
    android:orientation="vertical"
    android:padding="@dimen/padding_settings_fragment"
    tools:context=".SettingsFragment">

    <!-- Scroll speed controls-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/settings_speed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settings_speed_label"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_scroll_speed_label"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/settings_speed_value"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/settings_speed_label"
            app:layout_constraintTop_toBottomOf="@+id/settings_speed_label"
            tools:text="36" />

        <ImageButton
            android:id="@+id/settings_btn_speed_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/a11y_cd_settings_increase_speed"
            android:src="@drawable/ic_minus"
            app:layout_constraintBottom_toBottomOf="@+id/settings_speed_value"
            app:layout_constraintRight_toLeftOf="@id/settings_btn_speed_increase"
            app:layout_constraintTop_toTopOf="@+id/settings_speed_value" />

        <ImageButton
            android:id="@+id/settings_btn_speed_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/a11y_cd_settings_decrease_scroll_speed"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="@+id/settings_btn_speed_decrease"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_speed_decrease" />


    </android.support.constraint.ConstraintLayout>

    <!-- Text size controls-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/settings_text_size_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_settings_item">

        <TextView
            android:id="@+id/settings_text_size_label"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seting_text_size_label"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/settings_text_size_value"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/settings_text_size_label"
            app:layout_constraintTop_toBottomOf="@+id/settings_text_size_label"
            tools:text="36pt" />

        <ImageButton
            android:id="@+id/settings_btn_text_size_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/a11y_cd_settings_increase_speed"
            android:src="@drawable/ic_minus"
            app:layout_constraintBottom_toBottomOf="@+id/settings_text_size_value"
            app:layout_constraintRight_toLeftOf="@id/settings_btn_text_size_increase"
            app:layout_constraintTop_toTopOf="@+id/settings_text_size_value" />

        <ImageButton
            android:id="@+id/settings_btn_text_size_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/a11y_cd_settings_decrease_scroll_speed"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="@+id/settings_btn_text_size_decrease"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_btn_text_size_decrease" />


    </android.support.constraint.ConstraintLayout>

    <!--Text Color picker -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/settings_layout_text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_settings_item">

        <TextView
            android:id="@+id/settings_text_color_label"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text_color_label" />

        <TextView
            android:id="@+id/settings_text_color_value"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_text_color_label"
            tools:text="#FFFFFF" />

        <View
            android:id="@+id/settings_text_color_preview"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            app:layout_constraintBottom_toBottomOf="@+id/settings_text_color_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settings_text_color_value" />


    </android.support.constraint.ConstraintLayout>


</LinearLayout>